# TotoCompression

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: README.md  README.txt
src/: main.cpp
src/image/: TotoBlock.cpp  TotoBlock.hpp  TotoCompressionMeasure.cpp  TotoCompressionMeasure.hpp  TotoConstants.hpp  TotoImage.cpp  TotoImage.hpp  TotoImageConstants.hpp
src/io/: TotoImageMetadata.hpp  TotoReader.cpp  TotoReader.hpp  TotoWriter.cpp  TotoWriter.hpp
src/operations/: TotoFileContent.hpp  TotoOperation.hpp  TotoOperationHandler.cpp  TotoOperationHandler.hpp  TotoOperationType.hpp
src/video/: TotoBVideo.cpp  TotoBVideo.hpp  TotoDVideo.cpp  TotoDVideo.hpp  TotoIVideo.cpp  TotoIVideo.hpp  TotoVideo.cpp  TotoVideo.hpp
src/view/: ITotoOutput.hpp  TotoConsoleOutput.cpp  TotoConsoleOutput.hpp
